<resources>
    <string name="app_name">极简byte</string>

    <string name="tab_text_1">作品</string>
    <string name="tab_text_2">私密</string>
    <string name="tab_text_3">收藏</string>
    <string name="tab_text_4">喜欢</string>
    <string name="action_settings">Settings</string>
    <string name="city">城市 :</string>
    <string name="country">国家 :</string>
    <string name="nickname">昵称 :</string>
    <string name="name_store">抖音商城</string>
    <string name="receive_count">待收货： 1</string>
    <string name="name_open">开放服务</string>
    <string name="recently_used">最近使用</string>
    <string name="edit_profile">编辑资料</string>
    <string name="new_friends">新朋友</string>
    <string name="rate">点赞 :</string>
    <string name="follow">关注 :</string>
    <string name="sub">粉丝 :</string>

    <string name="large_text">
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="tap2login">请点击头像登录</string>
    <string name="unknown_gender">未知性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="unknown">未知</string>
    <string name="no_introduction">哈喽，欢迎使用抖音，现在点击添加介绍, 让大家认识你吧...</string>
    <string name="set_nickname">请设置昵称</string>
    <string name="cancel">取消</string>
    <string name="settings">设置</string>
    <string name="logout">退出登录</string>
    <string name="change_bg">更换背景</string>
</resources>