<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.fragment.MineFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="#FFFFFF"
            android:background="@color/white"
            app:layout_scrollFlags="scroll"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_mypage"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cl_avatar">

                    <ImageView
                        android:id="@+id/img_wall"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/wall"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.9"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/btn_settings"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@android:color/transparent"
                        android:src="@drawable/round_menu_fill1"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="15dp"
                        android:scaleType="centerInside"/>

                    <ImageView
                        android:id="@+id/img_avatar"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/wall"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.9"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="@dimen/mb_location"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_name_city"
                        android:text="@string/city"
                        android:textSize="@dimen/ts_location"
                        android:paddingStart="@dimen/info_padding"
                        android:paddingBottom="@dimen/mb_location"
                        app:layout_constraintStart_toEndOf="@id/img_avatar"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_value_city"
                        android:text="@string/unknown"
                        android:textSize="@dimen/ts_location"
                        android:paddingStart="@dimen/info_padding"
                        android:paddingBottom="@dimen/mb_location"
                        app:layout_constraintStart_toEndOf="@id/tv_name_city"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_name_country"
                        android:text="@string/country"
                        android:textSize="@dimen/ts_location"
                        android:paddingStart="@dimen/info_padding"
                        android:paddingBottom="@dimen/mb_location"
                        app:layout_constraintStart_toEndOf="@id/tv_value_city"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_value_country"
                        android:text="@string/unknown"
                        android:textSize="@dimen/ts_location"
                        android:paddingStart="@dimen/info_padding"
                        android:paddingBottom="@dimen/mb_location"
                        app:layout_constraintStart_toEndOf="@id/tv_name_country"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_name_nickname"
                        android:text="@string/nickname"
                        android:textSize="@dimen/ts_name"
                        android:padding="@dimen/info_padding"
                        app:layout_constraintStart_toEndOf="@id/img_avatar"
                        app:layout_constraintBottom_toTopOf="@id/tv_name_city" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_value_nickname"
                        android:text="@string/set_nickname"
                        android:textSize="@dimen/ts_name"
                        android:padding="@dimen/info_padding"
                        android:maxLength="12"
                        app:layout_constraintStart_toEndOf="@id/tv_name_nickname"
                        app:layout_constraintBottom_toTopOf="@+id/tv_name_city" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_value_gender"
                        android:textSize="@dimen/ts_name"
                        android:padding="@dimen/info_padding"
                        app:layout_constraintStart_toEndOf="@id/tv_value_nickname"
                        app:layout_constraintBottom_toTopOf="@+id/tv_name_city" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>